# ESP32S3_Daily_Test

./: README.md
ESP32S3_IDF_En_Speech_Commands_Recognition/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
ESP32S3_IDF_En_Speech_Commands_Recognition/main/: CMakeLists.txt  main.c
ESP32S3_IDF_En_Speech_Commands_Recognition/main/include/: dx1.h  i2s.h
ESP32S3_IDF_En_Speech_Commands_Recognition/辅助工具/: IDF添加新库方法.txt  music_to_c.py
ESP32S3_IDF_WIFI_MAX98357/: CMakeLists.txt
ESP32S3_IDF_WIFI_MAX98357/main/: CMakeLists.txt  idf_component.yml  main.c
ESP32S3_INMP441_WebSocket_Client/: README.md
ESP32S3_INMP441_WebSocket_Client/ESP32-S3_INMP441_WebSocket_Client/: ESP32-S3_INMP441_WebSocket_Client.ino
ESP32S3_INMP441_WebSocket_Client/wsAudioServer/: audio_client.html
ESP32S3_IRremote/: README.md
ESP32S3_IRremote/examples/IRrecvDumpV2/: IRrecvDumpV2.ino
ESP32S3_IRremote/examples/IRrecvDumpV3/: IRrecvDumpV3.ino
ESP32S3_IRremote/examples/TurnOnGreeAC/: TurnOnGreeAC.ino
